# WebHound

./: .gitignore  Cargo.toml  README.md
crates/analyzer/: Cargo.toml
crates/analyzer/src/: vision.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config/: Cargo.toml  ruls.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: analysis.rs  lib.rs  patterns.rs  utils.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: browser_manager.rs  crawler.rs  lib.rs  net.rs  screenshot.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  server.rs  templates.rs
crates/server/templates/: prediction_output_template.html
