[package]
name = "analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
work-core = { path = "../core" }
anyhow = "1"
tracing = "0.1"
ndarray = "0.15"
onnxruntime = { version = "0.0.14", features = ["load-dynamic"] } # пример
csv = "1"
camino = "1"
image = { version = "0.25", features = ["jpeg", "png", "bmp", "webp"] }
ort = { version = "1.16", features = ["download-binaries"] }
walkdir = "2"

