[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
server = { path = "../server" }
anyhow = "1"
tracing = "0.1"
ndarray = "0.15"
csv = "1"
camino = "1"
image = { version = "0.24.9", features = ["jpeg", "png", "bmp", "webp"] }
walkdir = "2"
ort = { version = "1", default-features = false, features = ["load-dynamic"] }

