[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" }
scanner = { path = "../scanner" }
analyzer = { path = "../analyzer" }
server = { path = "../server" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
camino = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
