[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../config" }
anyhow = "1"
once_cell = "1"
regex = "1"
sha2 = "0.10"
url = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros","fs","io-util","process","time"] }

